# MaterialsInformatics

./: .gitignore  LICENSE  README.md  desktop.ini  environment.yml  index.ipynb  main.py  mp-apikey.env.txt  original_requirements.txt  pyproject.toml  requirements_env.txt
CrysTens-main/: LICENSE  README.md  calculate_e_above_hull.py  crys_tens.py  generate_new_crys_tens.py  generated_crystal_statistics.py  get_stacked_crys_tens.py  train_diffusion_model.py  train_vanilla_gan.py  train_wasserstein_gan.py
CrysTens-main/Crystals/: Ac-535139.cif  AcBr3-1812253.cif  AcBr3-451069.cif  AcCl3-1812245.cif  AcCl3-451077.cif  AcCl3-559855.cif  AcH2-535137.cif  Ag-1140137.cif  Ag-1254053.cif  Ag-1407720.cif  Ag-1602675.cif  Ag-1719778.cif  Ag-1822504.cif  Ag-1822505.cif  Ag-1826508.cif  Ag-1921823.cif  Ag-1936497.cif  Ag-1942860.cif  Ag-1944210.cif  Ag-1944250.cif  Ag-261046.cif  (+20354 more)
HW/HW_spring_2025/HW1/: CHANGES_SUMMARY.md  HW1_instructions.md  HW1_spring2026.ipynb  OLLAMA_SETUP_GUIDE.md  README.md  UV_QUICK_REFERENCE.md  pyproject.toml
HW/HW_spring_2025/HW2/: HW2_instructions.md  HW2_spring2026_final.ipynb  README.md  pyproject.toml
HW/HW_spring_2025/HW3/: HW3_instructions.md  HW3_spring2026_final.ipynb  README.md  pyproject.toml
HW/HW_spring_2025/HW3/data/: crossed_barrel_dataset.csv
HW/HW_spring_2026/HW1/: HW1_instructions.md  pyproject.toml
HW/HW_spring_2026/HW1/hw1/: __init__.py
HW/HW_spring_2026/HW2/: HW2_instructions.md  HW2_spring2026_final.ipynb  README.md  pyproject.toml  smiles_tg.csv
HW/HW_spring_2026/HW3/: HW3_instructions.md  HW3_spring2026.ipynb  README.md  pyproject.toml
HW/HW_spring_2026/HW3/data/: shearmodulus_aflow.csv
HW/HW_spring_2026/HW3/data/micrographs/: micrograph1.tif  micrograph104.tif  micrograph109.tif  micrograph11.tif  micrograph111.tif  micrograph112.tif  micrograph113.tif  micrograph114.tif  micrograph119.tif  micrograph12.tif  micrograph121.tif  micrograph122.tif  micrograph124.tif  micrograph126.tif  micrograph127.tif  micrograph128.tif  micrograph13.tif  micrograph130.tif  micrograph131.tif  micrograph133.tif  micrograph135.tif  micrograph137.tif  micrograph138.tif  micrograph14.tif  micrograph148.tif  micrograph15.tif  micrograph150.tif  micrograph154.tif  micrograph157.tif  micrograph160.tif  micrograph161.tif  micrograph162.tif  micrograph166.tif  micrograph168.tif  micrograph169.tif  micrograph170.tif  micrograph171.tif  micrograph172.tif  micrograph176.tif  micrograph178.tif  (+327 more)
HW/HW_spring_2026/HW4/: HW4_instructions.md  HW4_spring2026.ipynb  README.md  pyproject.toml
MP_API_example/: MPRester tutorial.ipynb
RDKit_tutorial/: my_one_mol_object_3D.sdf
course_notes/: AI_MSE_companies_Jan2026.xlsx  AI_MSE_companies_Jan2026_nonexhaustive.xlsx
middleware/: invoke
papers/: README.md
testStuff/: Test.py  n-pentane.xyz
worked_examples/CBFV_example/: CBFV example.py  CBFV_example.ipynb  main.py  pyproject.toml
worked_examples/MP_API_example/: .python-version  1533343.cif  1536843.cif  2108454.cif  9008565.cif  9014166.cif  MPRester tutorial.ipynb  MP_API_tutorial.ipynb  lab6.cif  legacy_MPRester_tutorial.ipynb  main.py  new_MPRester_tutorial.ipynb  pyproject.toml
worked_examples/RDKit_tutorial/: RDkit_tutorial.ipynb  full_dataset_dd.csv  main.py  my_one_mol_object_3D.sdf  pyproject.toml
worked_examples/RDKit_tutorial/.ipynb_checkpoints/: RDkit_tutorial-checkpoint.ipynb
worked_examples/bayesian_optimization/: Ax_optimization.ipynb  BayesianOptimization.ipynb  README.md  bayesian_optimization_deep_dive.ipynb  honegumi_materials_workflow.ipynb  pyproject.toml
worked_examples/bayesian_optimization/scripts/: generate_notebooks.py
worked_examples/best_practices/: hello_best_practices.py  main.py  profile.html  pyproject.toml  requirements.txt
worked_examples/best_practices/data/: cp_data_cleaned.csv  cp_test.csv  cp_train.csv  cp_val.csv
worked_examples/best_practices/notebooks/: 0b-check_dependencies.ipynb  1-data_loading_cleanup_processing.ipynb  2-data_splitting.ipynb  3-modeling_classic_models.ipynb  4-modeling_neural_networks.ipynb  5-visualizing_results.ipynb  model_checkpoint.pth  profile.html
worked_examples/best_practices/notebooks/.ipynb_checkpoints/: 1-data_loading_cleanup_processing-checkpoint.ipynb  3_test-checkpoint.ipynb
worked_examples/codex_generative_materials/: README.md  agents.md  generate_dataset.py  pyproject.toml
worked_examples/codex_generative_materials/checkpoints/: ddpm.pt  vae.pt
worked_examples/codex_generative_materials/data/: finalval_ds.json  finalval_ds.npz  myset.json  notebook_smoke.json  notebook_smoke.npz  phase2_smoke.json  phase2_smoke.npz
worked_examples/codex_generative_materials/microgen/: __init__.py  data.py  synth.py  train_common.py  train_ddpm.py  train_gan.py  train_vae.py
worked_examples/codex_generative_materials/microgen/models/: __init__.py  ddpm.py  gan.py  vae.py
worked_examples/codex_generative_materials/notebooks/: 01_microstructure_generative_demo.ipynb
worked_examples/codex_generative_materials/notebooks/checkpoints/: ddpm.pt  vae.pt
worked_examples/codex_generative_materials/notebooks/data/: notebook_demo.json  notebook_demo.npz
worked_examples/codex_generative_materials/tests/: test_dataset.py  test_models.py  test_synth.py
worked_examples/cross_validation/: CrossValidation.ipynb  main.py  pyproject.toml
worked_examples/foundry/: foundry.ipynb  main.py  pyproject.toml  quickstart.ipynb
worked_examples/foundry/data/perovskite_stability_v1.1/: Dataset_perovskite_stability_v1_nofeatures.csv
worked_examples/foundry/dendrite-segmentation/: dendrite_segmentation.ipynb  foundry.json  requirements.txt
worked_examples/foundry/zeolite/: requirements.txt  zeolite_demo.ipynb
worked_examples/gaussian_process/: coding_gpr_from_scratch_notebook.ipynb  coing_gpr_from_scratch_notebook.ipynb  gaussian_process.ipynb  pyproject.toml
worked_examples/gaussian_process/.ipynb_checkpoints/: coing_gpr_from_scratch_notebook-checkpoint.ipynb
worked_examples/naive_bayes/: .env.example  README.md  naive_bayes.ipynb  naive_bayes.py  pyproject.toml
(+271 files in other folders)
