[project]
name = "materialsinformatics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matminer>=0.9.3",
    "matplotlib>=3.10.8",
    "mp-api>=0.45.15",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pymatgen>=2025.10.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]
