[project]
name = "mp-api-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mp-api>=0.45.15",
    "pandas>=2.3.3",
    "pymatgen>=2025.10.7",
    "python-dotenv>=1.2.1",
]
