[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "microstructure-gen"
version = "0.1.0"
description = "Laptop-friendly offline generative microstructure modeling demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["microgen"]
