[project]
name = "foundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foundry-ml>=1.2.0",
    "ipykernel>=7.1.0",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mdf-forge>=0.8.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "referencing==0.33.0",
]
