[project]
name = "gaussian-process-worked-example"
version = "0.1.0"
description = "Gaussian process regression worked example for materials informatics teaching."
requires-python = ">=3.11,<3.13"
dependencies = [
    "anywidget>=0.9",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "notebook>=7.4",
    "numpy>=2.2",
    "plotly>=6.0",
]

[tool.uv]
package = false
