[project]
name = "naive-bayes-example"
version = "0.1.0"
description = "Naive Bayes teaching example for materials informatics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mp-api>=0.45.15",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]
