[project]
name = "mse6640-hw1"
version = "0.1.0"
description = "HW1: Materials Data Extraction & Featurization"
requires-python = ">=3.10"
dependencies = [
    "pymatgen>=2024.1.26",
    "mp-api>=0.41.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "cbfv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
knowmat2 = [
    "knowmat2>=0.1.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]
nomad = [
    "nomad-lab>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
