[project]
name = "mse6640-hw2"
version = "0.1.0"
description = "HW2: Molecular Featurization, SMILES in ML, and Data Format Structures"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "rdkit>=2023.9.1",
    "umap-learn>=0.5.3",
    "py3Dmol>=2.0.0",
    "networkx>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
