[project]
name = "HW1"
version = "0.1.0"
description = "HW1: Materials Data Extraction & Featurization"
requires-python = ">=3.11"
dependencies = [
    "mp-api>=0.45.15",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "cbfv>=1.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
nomad = [
    "nomad-lab>=1.4.0",
    "jarvis-tools>=2025.8.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

