[project]
name = "hw2"
version = "0.1.0"
description = "HW2: Molecular Featurization, SMILES in ML, and Data Format Structures"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "rdkit>=2023.9.1",
    "umap-learn>=0.5.7",
    "numba>=0.60.0",
    "py3Dmol>=2.0.0",
    "networkx>=3.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]

[tool.uv]
link-mode = "copy"
