[project]
name = "HW3"
version = "0.1.0"
description = "HW3: Deep Learning - VAE, XRD Sequence Models & CrabNet"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "crabnet>=1.0.0",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
