[project]
name = "HW4"
version = "0.1.0"
description = "HW4: Gaussian Processes and Bayesian Optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "optuna>=3.0.0",
    "seaborn>=0.12.0",
    "cbfv>=1.0.0",
]

[tool.uv]
link-mode = "copy"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
